<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    Описание кнопок-->
    <string name="details_button_search">Поиск</string>

    <!--    Описание изображений-->
    <string name="details_desc_collection_image">Изображение коллекции</string>
    <string name="details_desc_backdrop">Фоновое изображение</string>
    <string name="details_desc_image_episode">Изображение эпизода</string>
    <string name="details_desc_poster_season">Постер сезона</string>

    <!--    Детальная информация-->
    <string name="details_overview">Описание</string>
    <string name="details_persons">Актёры</string>
    <string name="details_trailers">Трейлеры</string>
    <string name="details_facts">Факты</string>
    <string name="details_runtime">Продолжительность</string>
    <string name="details_original_title">Оригинальное название</string>
    <string name="details_revenue">Сборы</string>
    <string name="details_budget">Бюджет</string>
    <string name="details_release_date">Дата выхода</string>
    <string name="details_original_language">Оригинальный язык</string>
    <string name="details_status">Статус</string>
    <string name="details_company_production">Компании производства</string>
    <string name="details_images">Изображения</string>
    <string name="details_additional_options">Дополнительно</string>
    <string name="details_recommendations">Рекомендации</string>
    <string name="details_all_comments">Все комментарии</string>
    <string name="details_reviews">Отзывы</string>
    <string name="details_place_of_birth">Место рождения</string>
    <string name="details_date_birthday">День рождения</string>
    <string name="details_biography">Биография</string>
    <string name="details_comments">Комментарии</string>
    <string name="details_recommendations_and_similar">Рекомендации и похожее</string>


    <string name="details_fact_first_air_date">Дата первого эфира</string>
    <string name="details_fact_last_air_date">Дата последнего эфира</string>
    <string name="details_fact_seasons_and_episodes">Сезоны и серии</string>

    <!--    Errors-->
    <string name="details_network_state_error_retry">Произошла ошибка</string>
    <string name="details_nav_retry">Повторить попытку</string>

    <!--    Base variable-->
    <string name="details_tvs">Сериалы</string>
    <string name="details_movies">Фильмы</string>
    <string name="details_is_absent">Отсутствует</string>
    <string name="details_unknown">Неизвестно</string>

    <string name="details_filmography">Фильмография</string>

    <!--    Person page-->
    <string name="details_inline_filmography_delimiter">как</string>

    <!--    Date mask-->
    <string name="details_yyyy_mm_dd" translatable="false">yyyy-MM-dd</string>

    <!--    Mask for short info. Example 2019 Action, Drama, Fantasy-->
    <string name="details_short_info_mask" translatable="false">%s %s</string>

    <!--    Mask for runtime. Example 2 hour 35 minutes-->
    <string name="details_runtime_mask" translatable="false">%s %s</string>
    <string name="details_max_rate_with_slash" translatable="false">/10</string>
    <string name="details_watch_trailer">Смотреть трейлер</string>
    <string name="movie_details_screen_watch_online">Смотреть онлайн</string>

    <!--    Extra menu-->
    <string name="details_extra_menu_title">Дополнительно</string>

    <string name="details_extra_menu_will_watch">Добавить в Буду смотреть</string>
    <string name="details_extra_menu_add_to_favorites">Добавить в избраноое</string>
    <string name="details_extra_menu_recommendation_and_similar">Рекомендации и похожее</string>
    <string name="details_extra_menu_reviews">Отзывы</string>
    <string name="details_extra_menu_comments">Комментарии</string>
    <string name="details_extra_menu_trailers">Трейлеры</string>
    <string name="details_extra_menu_share">Поделиться</string>

    <string name="details_movie_extra_menu_rate">Оценить фильм</string>

    <string name="details_tv_extra_menu_rate_tv">Оценить сериал</string>

    <!--    Watch online-->
    <string name="details_watch_online_add_site">Добавить сайт</string>
    <string name="details_watch_online_google_search">Найти в Google</string>
    <string name="details_watch_online_title">Где посмотреть</string>

    <!--    Рекомендации-->
    <string name="recommendations_screen_title">Рекомендации</string>
    <string name="details_screen_refresh">Обновить</string>

    <!--    Plurals-->
    <plurals name="minutes">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минут</item>
        <item quantity="many">%1$d минуты</item>
        <item quantity="other">%1$d минуты</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%1$d час</item>
        <item quantity="few">%1$d часа</item>
        <item quantity="many">%1$d часов</item>
        <item quantity="other">%1$d часов</item>
    </plurals>
</resources>