<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/person_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_close"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:background="?attr/selectableItemBackground"
                        android:padding="16dp"
                        android:src="@drawable/ic_arrow_down_24"
                        android:tint="@color/mine_shaft"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="56dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/cc_montserrat_bold"
                        android:gravity="center"
                        android:text="@string/details_biography"
                        android:textAlignment="center"
                        android:textColor="@color/mine_shaft"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:fontFamily="@font/cc_montserrat_regular"
                        android:textColor="@color/mine_shaft"
                        android:textSize="14sp"
                        android:text="@string/details_date_birthday" />

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/cc_montserrat_medium"
                        android:textColor="@color/mine_shaft"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:fontFamily="@font/cc_montserrat_regular"
                        android:textColor="@color/mine_shaft"
                        android:textSize="14sp"
                        android:text="@string/details_place_of_birth" />

                    <TextView
                        android:id="@+id/place_of_birth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/cc_montserrat_medium"
                        android:textColor="@color/mine_shaft"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/cc_montserrat_regular"
                    android:textColor="@color/mine_shaft"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>